# SFML_Oscilloscope

./: CMakeLists.txt
include/: FFT.h  MCU.h  fft.h  mcu.h  osc.h  parameters.h
res/: init.txt
src/: fft.cpp  main.cpp  mcu.cpp  osc.cpp  parameters.cpp
